--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
     "@types/classnames": "^2.3.1",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
