--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/parser": "^5.29.0",
     "eslint": "^8.18.0",
     "eslint-config-next": "12.1.6",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "sass": "^1.53.0",
     "stylelint": "^14.9.1",
     "stylelint-config-standard": "^26.0.0",
