--- a/.eslintrc
+++ b/.eslintrc
@@ -2,10 +2,11 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "plugins": [
-    "@typescript-eslint",
+    "@typescript-eslint"
   ],
   "rules": {
     "semi": "off",
+    "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/semi": [
       "warn"
     ],
