--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "date-fns": "^2.29.1",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
